fix setting
