# docs/swagger.yaml
@@ -1128,18 +1128,6 @@ definitions:
       reserve_setting:
         type: string
     type: object
-  vo.WindowsUpdateReq:
-    properties:
-      pro_plan_setting:
-        description: 项目计划填报
-        type: string
-      progress_setting:
-        description: 项目进度填报
-        type: string
-      reserve_setting:
-        description: 储备库填报
-        type: string
-    type: object
 info:
   contact:
     email: york-xia@gmail.com
@@ -1910,21 +1898,16 @@ paths:
       summary: 获取储备库出库审核项目列表
       tags:
       - 审批中心 - 项目审核 - 储备库审核
-  /api/v1/inspect/window/{id}/setting:
+  /api/v1/inspect/window/setting:
     put:
       description: 窗口期设置修改
       parameters:
-      - description: 窗口期设置id
-        in: path
-        name: id
-        required: true
-        type: string
-      - description: WindowsUpdateReq
+      - description: WindowsReq
         in: body
         name: parameters
         required: true
         schema:
-          $ref: '#/definitions/vo.WindowsUpdateReq'
+          $ref: '#/definitions/vo.WindowsReq'
       responses:
         "200":
           description: 窗口期设置修改成功
@@ -1947,40 +1930,6 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: 窗口期设置修改
-      tags:
-      - 审批中心 - 项目审核 - 窗口期设置
-  /api/v1/inspect/window/setting:
-    post:
-      description: 创建窗口期设置
-      parameters:
-      - description: WindowsReq
-        in: body
-        name: parameters
-        required: true
-        schema:
-          $ref: '#/definitions/vo.WindowsReq'
-      responses:
-        "200":
-          description: 创建储备库项目成功
-        "400":
-          description: 请求参数错误
-          schema:
-            $ref: '#/definitions/vo.Error'
-        "401":
-          description: 当前用户登录令牌失效
-          schema:
-            $ref: '#/definitions/vo.Error'
-        "403":
-          description: 当前操作无权限
-          schema:
-            $ref: '#/definitions/vo.Error'
-        "500":
-          description: 服务器内部错误
-          schema:
-            $ref: '#/definitions/vo.Error'
-      security:
-      - ApiKeyAuth: []
-      summary: 创建窗口期设置
       tags:
       - 审批中心 - 项目审核 - 窗口期设置
   /api/v1/inspect/window/settings:
